--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -23,7 +23,7 @@ jobs:
         mv *AppImage dist/
 
     - name: Upload artifact
-      uses: actions/upload-artifact@v1.0.0
+      uses: actions/upload-artifact@v4.4.0
       with:
         name: Spacecadetpinball-git-x86_64.AppImage
         path: 'dist'
@@ -34,7 +34,7 @@ jobs:
       runs-on: ubuntu-latest
 
       steps:
-        - uses: actions/download-artifact@v1
+        - uses: actions/download-artifact@v4.1.8
           with:
             name: Spacecadetpinball-git-x86_64.AppImage
 
@@ -46,6 +46,6 @@ jobs:
             prerelease: false
             draft: false
             files: |
-              Spacecadetpinball-git-x86_64.AppImage
+              *.AppImage
             repo_token: ${{ secrets.GITHUB_TOKEN }}
 
