--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -8,15 +8,16 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
 
     - name: build
       if: always()
       run: |
-        sudo apt update && sudo apt install libfuse2 desktop-file-utils
-        wget https://raw.githubusercontent.com/ivan-hc/Spacecadetpinball-git-appimage/main/spacecadetpinball-git-junest.sh
+        sudo apt update && sudo apt install desktop-file-utils
+        sudo sysctl -w kernel.apparmor_restrict_unprivileged_unconfined=0
+        sudo sysctl -w kernel.apparmor_restrict_unprivileged_userns=0
         chmod a+x ./spacecadetpinball-git-junest.sh
         ./spacecadetpinball-git-junest.sh
         mkdir dist
